--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "fs": "^0.0.1-security",
+    "googleapis": "^144.0.0",
     "http-status": "^1.7.4",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.9.0",
+    "multer": "^1.4.5-lts.1",
     "winston": "^3.14.2"
   },
   "devDependencies": {
