--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.9.0",
     "multer": "^1.4.5-lts.1",
+    "serverless-http": "^3.2.0",
     "winston": "^3.14.2"
   },
   "devDependencies": {
