--- a/.vercel/project.json
+++ b/.vercel/project.json
@@ -1,1 +1,1 @@
-{"orgId":"team_6hUmh0wdLzAElqneltCBJuNA","projectId":"prj_Ed13W4iGRe61TjRjzPZspqzCVeYL"}
+{"projectId":"prj_Ed13W4iGRe61TjRjzPZspqzCVeYL","orgId":"team_6hUmh0wdLzAElqneltCBJuNA"}
